<resources>
    <string name="app_name">A Million Things To Do</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_group_view">Todo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_unknown_error">"Unknown Error"</string>
    <string name="prompt_username">Username</string>
    <string name="action_login">Log In</string>
    <string name="action_register">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="action_task_uncompleted">marked task as uncompleted: </string>
    <string name="action_task_completed">completed task: </string>
    <string name="action_comment">commented: </string>
    <string name="status_not_started">Not Started</string>
    <string name="status_in_plan">In Plan</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="status_on_hold">On Hold</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="logout">Log Out</string>
    <string name="register_failed">Register Failed</string>
    <string name="add_entry">Add entry</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="loading">Loading...</string>
    <string name="user_count">User Count</string>
    <string name="token_expired">Login token expired. Please log in manually.</string>
    <string name="press_back_again">Press back button again to exit the app!</string>
    <string name="todo_status">Todo Status</string>
    <string name="default_task_count">0 / 0</string>
    <string name="todo_title">Title</string>
    <string name="todo_description">Todo Description</string>
    <string name="todo_title_text">Title</string>
    <string name="todo_description_text">Description</string>
    <string name="todo_tasks_text">Tasks</string>
    <string name="todo_deadline_text">Deadline</string>
    <string name="deadline_not_set">Not Set</string>
    <string name="edit">Edit</string>
    <string name="todo_status_text">Status</string>
    <string name="todo_action_history_text">Action History</string>
    <string name="expand">Expand</string>
</resources>